server: Add MongoConfig

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -36,3 +36,9 @@ externalService.dispatcher {
     fixed-pool-size = 50
   }
 }
+
+mongo {
+  uri = "mongodb://localhost"
+
+  host = ${?XSN_MONGO_URI}
+}
